--- a/nextjs/src/components/OrderItem/OrderItem.module.css
+++ b/nextjs/src/components/OrderItem/OrderItem.module.css
@@ -1,6 +1,5 @@
 
 .imageBackground {
-  background: #503E9D;
   border-radius: 27px;
   width: 100%;
   min-width: 72px;
@@ -19,19 +18,6 @@
   height: 80%;
 }
 
-.remove {
-  background: #EFECFF;
-  border-radius: 60px;
-  border: 1px solid #EFECFF;
-  color: #503E9D;
-}
-
-.remove:hover {
-  background: #503E9D;
-  color: #EFECFF;
-  border: 1px solid #503E9D;
-}
-
 .btnSign {
   border: none;
   background-color: inherit;
@@ -39,8 +25,14 @@
   display: inline-block;
 }
 
+.remove {
+  color: #FB9300;
+  border: none;
+  background-color: inherit;
+}
+
 .btnSign:hover { 
-  background: #EFECFF;
+  background: #FEF1E4;
   border-radius: 25px;
 }
 
