--- a/nextjs/src/pages/admin/Menu/Menu.module.css
+++ b/nextjs/src/pages/admin/Menu/Menu.module.css
@@ -1,23 +1,51 @@
 @import url('https://fonts.googleapis.com/css?family=Krona+One');
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-
 .main {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 60px 0px 0px;
+    height: 100%;
     background-color: #F9F7FA;
+}
+
+.add_category_button {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    width: 600px;
+
+}
+.add_category_button button {
+    background: none;
+    color: inherit;
+    border: none;
+    font: inherit;
+    cursor: pointer;
+    outline: inherit;
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    color: #8E8F98;
 
 }
 
+.nav_menu {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 0 0 3.5rem 0;
+}
 .selected_nav_item {
     font-family: 'Krona One';
     font-size: 36px;
-    width: 220px;
+    width: 250px;
     height: 45px;
     text-align: center;
     color: #FB9300;
+    margin: 0px 20px;
 }
 
 .selected_nav_item:hover {
@@ -32,6 +60,8 @@
     height: 45px;
     width: 220px;
     border-bottom: 3px solid #AAB0B3;
+    margin: 0px 20px;
+
 }
 
 .muted_nav_item:hover {
@@ -39,5 +69,3 @@
     text-decoration: none;
 
 }
-
-
