--- a/nextjs/src/pages/admin/Menu/Menu.module.css
+++ b/nextjs/src/pages/admin/Menu/Menu.module.css
@@ -6,7 +6,7 @@
     flex-direction: column;
     align-items: center;
     padding: 60px 0px 0px;
-    height: 100%;
+    height: 100vh;
     background-color: #F9F7FA;
 }
 
