--- a/nextjs/src/pages/admin/Orders/Orders.module.css
+++ b/nextjs/src/pages/admin/Orders/Orders.module.css
@@ -8,7 +8,7 @@
     align-items: center;
     padding: 60px 0px 0px;
     background-color: #F9F7FA;
-
+    height: 100vh;
 }
 
 .selected_nav_item {
