--- a/nextjs/src/pages/admin/Account/Account.module.css
+++ b/nextjs/src/pages/admin/Account/Account.module.css
@@ -5,7 +5,7 @@
 .main {
     padding: 60px;
     background: #F9F7FA;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .form_area {
@@ -22,6 +22,17 @@
     height: 60px;
 }
 
+.form_input_btn {
+    font-family: Montserrat;
+    align-items: center;
+    padding: 20px 0px 20px 30px;
+    margin: 20px 0px;
+    border: 0px solid #E3E1E6;
+    border-radius: 25px;
+    font-size: 20px;
+    height: 60px;
+    width: 30%;
+}
 
 .orng_button {
     width: 100%;
