added Krona style link and styles to the header

--- a/nextjs/src/components/Header/Header.module.css
+++ b/nextjs/src/components/Header/Header.module.css
@@ -1,4 +1,42 @@
-
+/* main div */
 .header {
   height: 100px;
+  font-family: 'Krona One', sans-serif;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.header a{
+  color: #1E1F31;
+  font-size: 16px;
+}
+/* left section */
+.logoDiv{
+  margin: auto;
+  flex-basis: 50%;
+}
+
+.logo{
+  width: 188px;
+  height: 64px;
+  background-image: url("../../../public/logo_header.png");
+}
+/* right section */
+.nav{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  flex-basis: 50%;
+  margin: auto;
+}
+
+.nav div{
+  margin: auto;
+}
+
+.searchIcon{
+  width: 30px;
+  height: 30px;
+  background-image: url("../../../public/search-icon.png");
 }
