--- a/nextjs/src/components/OrderForm/OrderForm.module.css
+++ b/nextjs/src/components/OrderForm/OrderForm.module.css
@@ -4,7 +4,15 @@
 }
 
 .header {
-  font-size: 20px;
+  padding-top: 10px;
+  font-size: 22px;
+  font-family: 'Krona One', sans-serif;
+}
+
+.emptyCart{
+  font-family: 'Montserrat', sans-serif;
+  font-size: 12px;
+  font-weight: 400;
 }
 
 .itemsBlock {
@@ -35,6 +43,7 @@
 .orderBtn {
   width: 100%;
   height: 40px;
+  font-family: 'Krona One', sans-serif;
 }
 
 .orderBtn:disabled {
@@ -44,3 +53,9 @@
 .scrollBlock::-webkit-scrollbar { 
   display: none;  /* Safari and Chrome */
 }
+
+.highlightSum{
+  color: #FB9300;
+}
+
+
