--- a/nextjs/src/components/CatalogLayout/CatalogLayout.module.css
+++ b/nextjs/src/components/CatalogLayout/CatalogLayout.module.css
@@ -1,10 +1,12 @@
 .pad {
   padding-top: 50px;
+  background-color: #F9F7FA;
 }
+
 
 .sideBar {
   height: 100vh;
-  background-color: #F9F9F9;
+  background-color: #FFFFFF;
   position: fixed;
   right: 0;
 }
