--- a/nextjs/src/components/CatalogLayout/CatalogLayout.module.css
+++ b/nextjs/src/components/CatalogLayout/CatalogLayout.module.css
@@ -4,7 +4,10 @@
 
 .sideBar {
   height: 100vh;
-  background-color: #F9F9F9;
   position: fixed;
   right: 0;
+}
+
+.maincolor{
+  background-color: #F9F9F9;
 }
