--- a/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
+++ b/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
@@ -3,10 +3,15 @@
   border-radius: 40px;
   border: none;
   background-color: #FFFFFF;
-  height: 100px;
+  height: 120px;
   width: 12%;
   font-family: 'Montserrat', sans-serif;
-  margin-left: 10px;
+  font-weight: 600;
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .title{
@@ -18,6 +23,14 @@
 .list{
   display: flex;
   flex-direction: row;
-  margin: auto;
+  /*margin: auto;*/
   font-size: 15px;
+}
+
+.categoryImg{
+  width: 48px;
+  height: 48px;
+  background-image: url("../../../public/sushi.png");
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
