--- a/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
+++ b/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
@@ -14,6 +14,12 @@
   align-items: center;
 }
 
+.category:hover {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+  background-color: #FEF1E4;
+}
+
 .title{
   font-family: 'Krona One', sans-serif;
   font-size: 24px;
@@ -23,7 +29,7 @@
 .list{
   display: flex;
   flex-direction: row;
-  /*margin: auto;*/
+  margin-bottom: 20px;
   font-size: 15px;
 }
 
