--- a/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
+++ b/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
@@ -5,6 +5,7 @@
   background-color: #FFFFFF;
   height: 120px;
   width: 12%;
+  min-width: 100px;
   font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   margin: 0 auto;
@@ -29,6 +30,7 @@
 .list{
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   margin-bottom: 20px;
   font-size: 15px;
 }
@@ -36,7 +38,7 @@
 .categoryImg{
   width: 48px;
   height: 48px;
-  background-image: url("../../../public/sushi.png");
+  background-image: url("/sushi.png");
   margin-bottom: 10px;
   margin-top: 10px;
 }
