--- a/nextjs/src/components/Header/Header.module.css
+++ b/nextjs/src/components/Header/Header.module.css
@@ -20,7 +20,7 @@
 .logo{
   width: 188px;
   height: 64px;
-  background-image: url("../../../public/logo_header.png");
+  background-image: url("/logo_header.svg");
 }
 /* right section */
 .nav{
@@ -38,5 +38,5 @@
 .searchIcon{
   width: 30px;
   height: 30px;
-  background-image: url("../../../public/search-icon.png");
+  background-image: url("/search-icon.png");
 }
