--- a/nextjs/src/pages/admin/Menu/Menu.module.css
+++ b/nextjs/src/pages/admin/Menu/Menu.module.css
@@ -5,9 +5,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 60px 0px 0px;
-    height: 100vh;
-    background-color: #F9F7FA;
+    flex-wrap: nowrap;
+    padding: 60px 0px;
+    background: #F9F7FA;
+    min-height: 100vh;
 }
 
 .add_category_button {
