--- a/nextjs/src/pages/admin/MenuContainer/MenuContainer.module.css
+++ b/nextjs/src/pages/admin/MenuContainer/MenuContainer.module.css
@@ -1,5 +1,7 @@
 
 .main {
+    flex-wrap: nowrap;
+
 }
 
 .main p{
@@ -9,15 +11,26 @@
     font-size: 24px;
 }
 
-.main .items_list {
+ .items_list {
     margin: 30px 0;
 
 }
 
-.main .orng_btn {
+ .orng_btn {
     height: 55px;
     width: 100%;
     background: #FB9300;
+    border-radius: 40px;
+    border: 0px;
+    font-family: Krona One;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+}
+ .orng_btn:hover {
+    height: 55px;
+    width: 100%;
+     background: #D67600;
     border-radius: 40px;
     border: 0px;
     font-family: Krona One;
