--- a/nextjs/src/pages/admin/MenuItem/MenuItem.module.css
+++ b/nextjs/src/pages/admin/MenuItem/MenuItem.module.css
@@ -1,6 +1,6 @@
 .main {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: space-between;
     align-items: center;
     padding: 16px;
@@ -8,6 +8,8 @@
     border-radius: 20px;
     background: #FFFFFF;
     margin: 10px 0;
+    flex-wrap: nowrap;
+
 }
 
 .main button {
@@ -23,11 +25,14 @@
 .menu_item {
     display: flex;
     flex-direction: row;
+    width: 60%;
 }
 
 .menu_item img {
-    height: 70px;
-    width: 70px;
+    max-height: 70px;
+    max-width: 70px;
+    min-height: 70px;
+    min-width: 70px;
 }
 
 .description_area {
@@ -58,7 +63,6 @@
     font-style: normal;
     font-weight: normal;
     font-size: 20px;
-    line-height: 25px;
     color: #FB9300;
     margin: 0 1rem;
 
@@ -67,10 +71,21 @@
 .instrument_area {
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 .tagPanel {
     display: flex;
     flex-direction: row;
-    margin: 20px 0px 0px 0px;
+    margin: 0px 0px 0px 170px;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    width: 100%;
+
+
+}
+
+.dishPanel {
+    display: flex;
+    flex-direction: row;
 }
