--- a/nextjs/src/pages/admin/Edit/Edit.module.css
+++ b/nextjs/src/pages/admin/Edit/Edit.module.css
@@ -87,7 +87,7 @@
     font-size: 18px;
     color: #FB9300;
     height: 55px;
-    width: 45%;
+    width: 40%;
     margin: 0 15px;
     border-radius: 40px;
 
@@ -165,6 +165,7 @@
     width: 150px;
     height: 150px;
     background-color: #8E8F98;
+    background-size:     cover;
     margin: 10px 0px;
 }
 
