--- a/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
+++ b/nextjs/src/components/CategoryCarousel/CategoryCarousel.module.css
@@ -3,7 +3,7 @@
   border-radius: 40px;
   border: none;
   background-color: #FFFFFF;
-  height: 120px;
+  height: 80px;
   width: 12%;
   min-width: 100px;
   font-family: 'Montserrat', sans-serif;
@@ -13,9 +13,16 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 20px 5px;
 }
 
 .category:hover {
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+  cursor: pointer;
+  background-color: #FEF1E4;
+}
+
+.category_selected {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
   cursor: pointer;
   background-color: #FEF1E4;
@@ -37,7 +44,7 @@
 
 .categoryImg{
   width: 48px;
-  height: 48px;
+  height: 28px;
   background-image: url("/sushi.png");
   margin-bottom: 10px;
   margin-top: 10px;
